<resources>
    <string name="app_name">Safe Live</string>
    <string name="dashboard_title">Safe Live</string>
    <string name="patients_title">Patients</string>
    <string name="statistics_title">Statistics</string>
    <string name="action_settings">SETTINGS</string>
    <string name="action_contacts">PATIENTS</string>
    <string name="action_start">START</string>
    <string name="action_maps">MAPS</string>
    <string name="action_home">HOME</string>
    <string name="action_alert">ALERTS</string>
    <string name="action_statistics">STATISTICS</string>
    <string name="da_heart_status">HEART STATUS</string>
    <string name="da_oximetry">PULSE OXIMETRY TRACKING</string>
    <string name="da_activity">ACTIVITY TRACKING</string>
    <string name="da_blood_pressure">BLOOD PRESSURE</string>
    <string name="da_temperature">BODY TEMPERATURE</string>
    <string name="da_heart_risks">HEART RISKS</string>
    <string name="da_respiratory">RESPIRATORY ANOMALIES</string>
    <string name="da_diabetes">DIABETES RISKS</string>
    <string name="da_sleep">SLEEP</string>
    <string name="da_audio">AUDIO</string>
    <string name="da_incident_history">INCIDENT HISTORY</string>
    <string name="audio_average">Average surrounding sound quality during the day</string>
    <string name="decibel_format">%1$.0f dB</string>
    <string name="in_train">IN TRAIN</string>
    <string name="in_car">IN CAR</string>
    <string name="jumping">JUMPING</string>
    <string name="running">RUNNING</string>
    <string name="safe_live">Safe Live</string>
    <string name="alerts">ALERTS</string>
    <string name="home_title">Home</string>
    <string name="alert_title">Alert</string>
    <string name="settings_title">Settings</string>


    <!-- Preferences -->
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>

    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Calligraphy -->
    <string name="roboto_medium">fonts/Roboto-Medium.ttf</string>
    <string name="roboto_regular">fonts/Roboto-Regular.ttf</string>
    <string name="roboto_bold">fonts/Roboto-Bold.ttf</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="title_activity_maps">Map</string>

    <string name="first_and_last_names">%1$s %2$s</string>
    <string name="role_at">%s at</string>
    <string name="high_risk_text">High risk</string>
    <string name="regular_risk_text">Regular resident</string>
    <string name="current_activity">%s is currently</string>
    <string name="activity">Activity</string>
    <string name="sound">Sound</string>
    <string name="heart_rate_title">Heart Rate</string>
    <string name="sensors">Sensors</string>

</resources>
