<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/ic_home"
            android:title="@string/action_home" />

        <item
            android:id="@+id/alerts"
            android:checked="false"
            android:icon="@drawable/ic_warning"
            android:title="@string/action_alert" />

        <item
            android:id="@+id/patients"
            android:checked="false"
            android:icon="@drawable/ic_contacts"
            android:title="@string/action_contacts" />

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />


    </group>
</menu>
