<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_padding">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow>

            <TextView
                android:id="@+id/da_heart_status"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:clickable="true"
                android:drawablePadding="@dimen/da_drawable_text_padding"
                android:drawableTint="@color/dashboard_button"
                android:drawableTop="@drawable/heart_status_2"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding_bottom_action_button"
                android:paddingTop="@dimen/padding_top_action_button"
                android:text="@string/da_heart_status"
                android:textAlignment="gravity"
                android:textColor="@drawable/selector_tabs_text"
                android:textSize="@dimen/dashboard_button"/>

            <TextView
                android:id="@+id/da_oximetry"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@drawable/ripple_dashboard_button"
                android:clickable="true"
                android:drawablePadding="@dimen/da_drawable_text_padding"
                android:drawableTint="@color/dashboard_button"
                android:drawableTop="@drawable/oximetry_2"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding_bottom_action_button"
                android:paddingTop="@dimen/padding_top_action_button"
                android:text="@string/da_oximetry"
                android:textColor="@drawable/selector_tabs_text"
                android:textSize="@dimen/dashboard_button"/>

            <TextView
                android:id="@+id/da_activity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@drawable/ripple_dashboard_button"
                android:clickable="true"
                android:drawablePadding="@dimen/da_drawable_text_padding"
                android:drawableTint="@color/dashboard_button"
                android:drawableTop="@drawable/activity_2"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding_bottom_action_button"
                android:paddingTop="@dimen/padding_top_action_button"
                android:text="@string/da_activity"
                android:textColor="@drawable/selector_tabs_text"
                android:textSize="@dimen/dashboard_button"/>
        </TableRow>


        <TableRow>

            <TextView
                android:id="@+id/da_blood"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@drawable/ripple_dashboard_button"
                android:clickable="true"
                android:drawablePadding="@dimen/da_drawable_text_padding"
                android:drawableTint="@color/dashboard_button"
                android:drawableTop="@drawable/blood_pressure_2"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding_bottom_action_button"
                android:paddingTop="@dimen/padding_top_action_button"
                android:text="@string/da_blood_pressure"
                android:textColor="@drawable/selector_tabs_text"
                android:textSize="@dimen/dashboard_button"/>

            <TextView
                android:id="@+id/da_temperature"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@drawable/ripple_dashboard_button"
                android:clickable="true"
                android:drawablePadding="@dimen/da_drawable_text_padding"
                android:drawableTint="@color/dashboard_button"
                android:drawableTop="@drawable/temperature_2"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding_bottom_action_button"
                android:paddingTop="@dimen/padding_top_action_button"
                android:text="@string/da_temperature"
                android:textColor="@drawable/selector_tabs_text"
                android:textSize="@dimen/dashboard_button"/>

            <TextView
                android:id="@+id/da_heart_risks"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@drawable/ripple_dashboard_button"
                android:clickable="true"
                android:drawablePadding="@dimen/da_drawable_text_padding"
                android:drawableTint="@color/dashboard_button"
                android:drawableTop="@drawable/heart_riscks_2"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding_bottom_action_button"
                android:paddingTop="@dimen/padding_top_action_button"
                android:text="@string/da_heart_risks"
                android:textColor="@drawable/selector_tabs_text"
                android:textSize="@dimen/dashboard_button"/>
        </TableRow>


        <TableRow>

            <TextView
                android:id="@+id/da_respiratory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@drawable/ripple_dashboard_button"
                android:clickable="true"
                android:drawablePadding="@dimen/da_drawable_text_padding"
                android:drawableTint="@color/dashboard_button"
                android:drawableTop="@drawable/respiratory_2"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding_bottom_action_button"
                android:paddingTop="@dimen/padding_top_action_button"
                android:text="@string/da_respiratory"
                android:textColor="@drawable/selector_tabs_text"
                android:textSize="@dimen/dashboard_button"/>

            <TextView
                android:id="@+id/da_diabetes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@drawable/ripple_dashboard_button"
                android:clickable="true"
                android:drawablePadding="@dimen/da_drawable_text_padding"
                android:drawableTint="@color/dashboard_button"
                android:drawableTop="@drawable/diabetes_2"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding_bottom_action_button"
                android:paddingTop="@dimen/padding_top_action_button"
                android:text="@string/da_diabetes"
                android:textColor="@drawable/selector_tabs_text"
                android:textSize="@dimen/dashboard_button"/>

            <TextView
                android:id="@+id/da_sleep"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@drawable/ripple_dashboard_button"
                android:clickable="true"
                android:drawablePadding="@dimen/da_drawable_text_padding"
                android:drawableTint="@color/dashboard_button"
                android:drawableTop="@drawable/sleep_2"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding_bottom_action_button"
                android:paddingTop="@dimen/padding_top_action_button"
                android:text="@string/da_sleep"
                android:textColor="@drawable/selector_tabs_text"
                android:textSize="@dimen/dashboard_button"/>
        </TableRow>


        <TableRow>

            <TextView
                android:id="@+id/da_audio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@drawable/ripple_dashboard_button"
                android:clickable="true"
                android:drawablePadding="@dimen/da_drawable_text_padding"
                android:drawableTint="@color/dashboard_button"
                android:drawableTop="@drawable/audio_2"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding_bottom_action_button"
                android:paddingTop="@dimen/padding_top_action_button"
                android:text="@string/da_audio"
                android:textColor="@drawable/selector_tabs_text"
                android:textSize="@dimen/dashboard_button"/>

            <TextView
                android:id="@+id/da_incident"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@drawable/ripple_dashboard_button"
                android:clickable="true"
                android:drawablePadding="@dimen/da_drawable_text_padding"
                android:drawableTint="@color/dashboard_button"
                android:drawableTop="@drawable/incident_history_2"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding_bottom_action_button"
                android:paddingTop="@dimen/padding_top_action_button"
                android:text="@string/da_incident_history"
                android:textColor="@drawable/selector_tabs_text"
                android:textSize="@dimen/dashboard_button"/>

            <TextView
                android:id="@+id/da_empty"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding_bottom_action_button"
                android:paddingTop="@dimen/padding_top_action_button"
                android:textSize="@dimen/dashboard_button"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
